--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Filmoteka</title>
   </head>
   <body>
-    <div id="app">
-      <h1>Hello world!</h1>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
