--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Filmoteka</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Hello world</h1>
+    </div>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
