--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/film.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Filmoteka</title>
   </head>
   <body>
     <div id="app">
       <h1>Hello world</h1>
     </div>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
